Spacing and style fixes for client pages

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -66,7 +66,6 @@ h1
 .project-overview-description
   font-family: $family-sans-serif-bold
   font-size: 2.25em
-  margin-bottom: 5em !important
 
 .portfolio-taglist
   justify-content: center !important
@@ -1149,6 +1148,7 @@ h1
   padding: 3rem 1.5rem
 
 .project-contact-text
+  font-family: $family-sans-serif
   margin-bottom: .5em !important
 
 @media screen and (max-width: 768px)
@@ -1174,6 +1174,13 @@ h1
   .portfolio-post-hero
     min-height: 15vh
   .project-result-text
+    font-family: $family-serif !important
+    font-size: 1.5rem !important
+    margin-bottom: 1em !important
+  .project-message-body
+    font-family: $family-serif !important
+    font-size: 1.5rem !important
+  .message
     margin-bottom: 2em !important
 
 //Project-post
@@ -1190,10 +1197,10 @@ h1
   margin-bottom: 0
 
 .project-body
-  margin-bottom: 200px
+  margin-bottom: 100px
 
 .project-result-text
-  margin-bottom: 200px
+  margin-bottom: 100px
   font-family: $family-sans-serif-bold
   font-weight: 400
   font-size: 2.25rem
